manifests/nginx/external/addition-operator-ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: addition-operator
  annotations:
    kubernetes.io/ingress.class: "linkerd"
  labels:
    app: edge-gateway
    environment: preprod
spec:
  rules:
  - host: addition-operator
    http:
      paths:
      - backend:
          serviceName: addition-operator
          servicePort: my-http
